tests/e2e/keyword_as_service_argument.story
service action from: "" as: "" # Idea is to demonstrate argument `as` is parsed successfully.